--- a/public/html/agenciainfo.html
+++ b/public/html/agenciainfo.html
@@ -12,27 +12,24 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 </head>
-<body class="bg-info">
+<body style="background-color:#bcc6db;">
 
-<header class="position-relative w-100">
-<div class="row mw-100">
-	<div class="col col-sm-2">
-		<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-	</div>
-	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
-		<a class="text-dark" href="index.html">Provincias</a>
-	</div>
-	<div class="col col-sm-2 align-self-end pb-2">
-		<a class="text-dark" href="agencias.html">Agencias</a>
-	</div>
-	<div class="col col-sm-2 align-self-end pb-2">
-		<a class="text-dark" href="lineas.html">Lineas</a>
-	</div>
-	<div id="paginaagencia" class="col-10 col-sm-2 align-self-end pb-2 me-4">
-		
-	</div>
-</div>
-</header>
+	<header class="position-relative w-100">
+		<div  class="row mw-100">
+			<div class="col col-sm-2">
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+			</div>
+			<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
+				<a class="text-dark" href="index.html">Home</a>
+			</div>
+			<div class="col col-sm-2 align-self-end pb-2">
+				<a class="text-dark" href="agencias.html">Agencias</a>
+			</div>
+			<div class="col align-self-end pb-2">
+				<a class="text-dark" href="lineas.html">Lineas</a>
+			</div>
+		</div>
+		</header>
 
 <div id="nombreagencia"class="pt-4 row mw-100">
 
@@ -40,7 +37,7 @@
 <div class="row mw-100">
 	<div class="col">
 		<p class="fw-bold text-center pt-2">Listas de lineas en la ciudad</p>
-		<div class="bg-light border border-dark ms-5">
+		<div class="bg-light border border-dark ms-5 pt-1">
 			<ul id="agencialineas">
 
 			</ul>
@@ -56,34 +53,30 @@
 		<div id="datosdelaagencia" class="bg-light border border-dark ms-5">
 
 		</div>
-		<p class="fw-bold text-center pt-2">Informacion de contacto de la agencia</p>
-		<div id="contactodelaagencia" class="bg-light border border-dark ms-5">
-
-		</div>
 	</div>
 </div>
-<footer class="position-absolute w-100 mt-5">
+<br>
+<br>
+
+<footer id="test" class="position-absolute w-100 mt-5">
+
 	<div class="row">
 		<div class="col ms-5 pt-1">
-			<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-			<p class="pt-3 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
-      	<div class="row ms-2 pb">
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Condiciones de servicio</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Politica de privacidad</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Contactanos</a>
+			<div id="logofooter">
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+				<p class="pt-4 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
+			</div>
+      	<div id="linksfooter" >
+		      <div id="test8">
+		        <a  href="contacto.html" style="text-align: center;">Contactanos</a>
           </div>
 	      </div>
   </div>
-		<div class="col-3 pt-5 w-25">
-			<p class="bg-primary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
+		<div class="col-3 pt-3 w-25">
+			<p class="bg-secondary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
 			<ul>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Sobre el proyecto</a></li>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Desarollo</a></li>
+				<li><a href="index.html#sobreelproyecto">Sobre el proyecto</a></li>
+				<li><a href="index.html#desarollo">Desarollo</a></li>
 			</ul>
 		</div>
 	</div>
