--- a/public/html/contacto.html
+++ b/public/html/contacto.html
@@ -5,7 +5,12 @@
 <title> Pagina de colectivos - Provincias </title>
 <link rel="stylesheet" type="text/css" href="./css/indexdisenio.css">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
-
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.7.1/dist/leaflet.css"
+   integrity="sha512-xodZBNTC5n17Xt2atTPuE1HxjVMSvLVW9ocqUKLsCC5CXdbqCmblAshOMAS6/keqq/sMZMZ19scR4PsZChSR7A=="
+   crossorigin=""/>
+ <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"
+   integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
+   crossorigin=""></script>
 </head>
 
 <body style="background-color:#bcc6db;">
@@ -24,33 +29,17 @@
 				<a class="text-dark" href="lineas.html">Lineas</a>
 			</div>
 		</div>
-		</header>
-<div id="contenedor">
-	<img src="fondohome.jpg" id="fhanuie" width="4000" height="500"></img>
-	<h1 id="test9" class="pt-4">Colectivos de buenos aires</h1>
-	<p class="test9parrafo">Un sitio web de agencias de colectivo de buenos aires argentina</p>
+</header>
+<br>
+<div class="caja">
+    <div id="mapacontacto">
+    </div>
+    <br>
+    <p>Direccion: José Manuel de Estrada 1092, B1888FXV Florencio Varela, Provincia de Buenos Aires</p>
+    <p>Telefono: 54+ 11 9948-3929</p>
+    <p>Mail: colectivosargentina@gmail.com</p>
 </div>
-<div class="py-4 me-4 text-center">
-	<div class="row">
-		<a name="sobreelproyecto"></a>
-		<h1 class="text-center pb-5">Sobre el proyecto</h1>
-		<p>Es una pagina de colectivos que recolecta todas las agencias de la provincia de buenos aires junto a sus lineas y las muestra en un mapa con su recorrido y paradas.</p>
-	</div>
-</div>
-<div class="py-4 me-4 text-center">
-	<div class="row">
-		<a name="desarollo"></a>
-		<h1 class="text-center pb-5">Desarollo</h1>
-		<p>El proyecto fue desarollado paso por paso y cada uno de los integrantes ha puesto su parte para la construccion de este sitio web</p>
-		<h2 class="text-center pt-2 pb-3">Integrantes</h2>
-		<ul>
-			<li><p>Jonathan Daniel Santurio (Programador, Diseñador)</p></li>
-			<li><p>Massa Fabrizio Lautaro (Programador, Diseñador)</p></li>
-			<li><p>Pachexo Xavier (Diseñador)</p></li>
-			<li><p>Ezequiel Villagra (Diseñador)</p></li>
-		</ul>
-	</div>
-</div>
+<br>
 <footer id="test1">
 	<div class="row">
 		<div class="col ms-5 pt-1">
@@ -60,15 +49,15 @@
 			</div>
       	<div id="linksfooter" >
 		      <div id="test8">
-		        <a  href="contacto.html" style="text-align: center;">Contactanos</a>
+		        <a  href="#" style="text-align: center;">Contactanos</a>
           </div>
 	      </div>
   </div>
 		<div class="col-3 pt-3 w-25">
 			<p class="bg-secondary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
 			<ul>
-				<li><a href="#sobreelproyecto">Sobre el proyecto</a></li>
-				<li><a href="#desarollo">Desarollo</a></li>
+				<li><a href="index.html#sobreelproyecto">Sobre el proyecto</a></li>
+				<li><a href="index.html#desarollo">Desarollo</a></li>
 			</ul>
 		</div>
 	</div>
@@ -77,7 +66,7 @@
 <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
-
+<script src="./Javascript/mapacontacto.js"></script>
 </body>
 
 </html>
