--- a/public/html/infolinea.html
+++ b/public/html/infolinea.html
@@ -13,38 +13,36 @@
    integrity="sha512-XQoYMqMTK8LvdxXYG3nZ448hOEQiglfqkJs1NOQV44cWnUrBc8PkAOcXy20w0vlaXaVUearIOBhiXZ5V3ynxwA=="
    crossorigin=""></script>
 </head>
-<body class="bg-info">
+<body style="background-color:#bcc6db;">
 
 <header class="position-relative w-100">
-<div class="row mw-100">
+<div  class="row mw-100">
 	<div class="col col-sm-2">
 		<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
 	</div>
-	<div class="mt-3 sm-mt-0 col-sm-1 align-self-end pb-2">
-		<a class="text-dark" href="index.html">Provincias</a>
+	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
+		<a class="text-dark" href="index.html">Home</a>
 	</div>
-	<div class="col col-sm-1 align-self-end pb-2">
+	<div class="col col-sm-2 align-self-end pb-2">
 		<a class="text-dark" href="agencias.html">Agencias</a>
 	</div>
-	<div class="col col-sm-1 align-self-end pb-2">
+	<div class="col align-self-end pb-2">
 		<a class="text-dark" href="lineas.html">Lineas</a>
-	</div>
-	<div id="nombreagenciaurl" class="col col-sm-1 align-self-end pb-2 me-4">
-		
-	</div>
-	<div id="nombrelineaurl"class="col col-sm-1 align-self-end pb-2 ms-4">
-		
 	</div>
 </div>
 </header>
+<div id="test7">
+<div id="sitioagencia" class="row mt-3 mw-100">
 
-<div id="numeroLinea" class="row mt-3 mw-100">
+</div>
+<div id="numeroLinea" class="col mt-3 ">
 	
 </div>
-<div class="row py-2 bg-secondary ms-0 mw-100">
-	<div class="col pt-2">
+</div>
+<div id="test4" class="row py-2 bg-secondary ms-0 mw-100">
+	<div id="test4" class="col pt-2">
 			<div class="mx-2 bg-light border border-dark ">
-					<div class="titleparadas">
+					<div id="test4"  class="titleparadas">
 						<p class=" text-dark border border-dark fw-bold text-center mb-0">Paradas</p>
 					</div>
 					<div class="scrollable">
@@ -56,10 +54,9 @@
 					</div>
 			</div>
 	</div>
-
-		<div class="col pt-2">
-		<div class="mx-2 bg-light border border-dark">
-				<p class=" text-dark border border-dark fw-bold text-center mb-0">Recorrido del colectivo</p>
+		<div id="test4" class="col pt-2">
+		<div id="test4"class="mx-2 bg-light border border-dark">
+				<p id="test4" class=" text-dark border border-dark fw-bold text-center mb-0">Recorrido del colectivo</p>
         <div id="map2">
         </div>
 		</div>
@@ -68,28 +65,24 @@
 
 </div>
 
-<footer class="position-absolute w-100 mt-5">
+<footer id="test1">
 	<div class="row">
 		<div class="col ms-5 pt-1">
-			<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-			<p class="pt-3 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
-      	<div class="row ms-2 pb">
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Condiciones de servicio</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Politica de privacidad</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Contactanos</a>
+			<div id="logofooter">
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+				<p class="pt-4 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
+			</div>
+      	<div id="linksfooter" >
+		      <div id="test8">
+		        <a  href="contacto.html" style="text-align: center;">Contactanos</a>
           </div>
 	      </div>
   </div>
-		<div class="col-3 pt-5 w-25">
-			<p class="bg-primary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
+		<div class="col-3 pt-3 w-25">
+			<p class="bg-secondary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
 			<ul>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Sobre el proyecto</a></li>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Desarollo</a></li>
+				<li><a href="index.html#sobreelproyecto">Sobre el proyecto</a></li>
+				<li><a href="index.html#desarollo">Desarollo</a></li>
 			</ul>
 		</div>
 	</div>
