--- a/public/html/lineas.html
+++ b/public/html/lineas.html
@@ -7,55 +7,56 @@
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-F3w7mX95PdgyTmZZMECAngseQB83DfGTowi0iMjiWaeVhAn4FJkqJByhZMI3AhiU" crossorigin="anonymous">
 
 </head>
-<body class="bg-info">
+<body style="background-color:#bcc6db;">
 
 <header class="position-relative w-100">
-<div class="row mw-100">
-	<div class="col col-sm-2">
-		<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-	</div>
-	<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
-		<a class="text-dark" href="index.html">Provincias</a>
-	</div>
-	<div class="col col-sm-2 align-self-end pb-2">
-		<a class="text-dark" href="agencias.html">Agencias</a>
-	</div>
-	<div class="col-sm-5 align-self-end pb-2">
-		<a class="text-dark" href="#">Lineas</a>
-	</div>
-</div>
+		<div  class="row mw-100">
+			<div class="col col-sm-2">
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+			</div>
+			<div class="mt-3 sm-mt-0 col-sm-2 align-self-end pb-2">
+				<a class="text-dark" href="index.html">Home</a>
+			</div>
+			<div class="col col-sm-2 align-self-end pb-2">
+				<a class="text-dark" href="agencias.html">Agencias</a>
+			</div>
+			<div class="col align-self-end pb-2">
+				<a class="text-dark" href="lineas.html">Lineas</a>
+			</div>
+		</div>
 </header>
 
 <p class="fw-bold text-center pt-3">Lista de Lineas</p>
-<section class="bg-light rounded mx-4 pb-2">
-	<input class="w-75 mx-auto d-block" type="text" id="inputBuscar" onkeyup="buscarLinea()" placeholder="Buscar lista...">
-	<ul id="listadelineas">
+<section id="test3">
+	<input class="w-90 mx-auto d-block" type="text" id="inputBuscar" onkeyup="buscarLinea()" placeholder="Buscar linea...">
+	<ul id="listadelineas" class="pt-3">
 		
 	</ul>
 </section>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
+<br><br>
 
-<footer class="position-absolute w-100 mt-5">
+<footer id="test1">
 	<div class="row">
 		<div class="col ms-5 pt-1">
-			<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
-			<p class="pt-3 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
-      	<div class="row ms-2 pb">
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Condiciones de servicio</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Politica de privacidad</a>
-		      </div>
-		      <div class="col">
-		        <a class="text-dark fw-bold text-center" href="#">Contactanos</a>
+			<div id="logofooter">
+				<a href="index.html"><img src="logoejemplo.png" width=50px;></a>
+				<p class="pt-4 fw-bold">Una pagina simple sobre direcciones de lineas de colectivo</p>
+			</div>
+      	<div id="linksfooter" >
+		      <div id="test8">
+		        <a  href="contacto.html" style="text-align: center;">Contactanos</a>
           </div>
 	      </div>
   </div>
-		<div class="col-3 pt-5 w-25">
-			<p class="bg-primary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
+		<div class="col-3 pt-3 w-25">
+			<p class="bg-secondary text-wrap border border-dark rounded fw-bold" style="width: 3rem">Datos</p>
 			<ul>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Sobre el proyecto</a></li>
-				<li><a class="text-decoration-none text-dark fw-bold" href="#">Desarollo</a></li>
+				<li><a href="index.html#sobreelproyecto">Sobre el proyecto</a></li>
+				<li><a href="index.html#desarollo">Desarollo</a></li>
 			</ul>
 		</div>
 	</div>
